[gd_scene load_steps=15 format=3 uid="uid://ri0c7iffkrao"]

[ext_resource type="Script" uid="uid://bjgb7ybojs7e" path="res://SCRIPTS/Units/UnitInstance.gd" id="1_8f2nx"]
[ext_resource type="PackedScene" uid="uid://chgyuivvaogoe" path="res://RESOURCES/Juice/damage_indicator.tscn" id="2_e4h56"]
[ext_resource type="FontFile" uid="uid://dbk37dbkpdegv" path="res://ART/Fonts/ClassicShit.ttf" id="3_ea6il"]
[ext_resource type="Script" uid="uid://chsd8cfid3ll1" path="res://RESOURCES/Units/UnitHealthBar.gd" id="4_ae3kp"]
[ext_resource type="PackedScene" uid="uid://b86wbdh3gr6j1" path="res://RESOURCES/UI/Units/focus_slot.tscn" id="4_kfodt"]
[ext_resource type="Script" uid="uid://dqdpueov6o4eq" path="res://SCRIPTS/UI/General/EntryList.gd" id="4_lg50f"]
[ext_resource type="Texture2D" uid="uid://d261vu8tvss47" path="res://ART/Icons/Stats/icon_spdefense.png" id="4_reqvg"]
[ext_resource type="Texture2D" uid="uid://c226tw8lttshg" path="res://ART/Icons/Affinity/fire_affinity_icon.png" id="7_vnfmn"]
[ext_resource type="Texture2D" uid="uid://dhykeilpdios3" path="res://ART/Icons/Stats/green_up_arrow.png" id="9_v7dhr"]
[ext_resource type="Texture2D" uid="uid://b7efconyufomi" path="res://ART/Icons/Stats/red_down_arrow.png" id="10_pwwos"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n6je4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yrop1"]
bg_color = Color(0.929412, 0.333333, 0.345098, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.8, 0.8, 0.8, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_f5801"]
bg_color = Color(0.82, 0.82, 0.82, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.8, 0.8, 0.8, 0)

[sub_resource type="LabelSettings" id="LabelSettings_lypks"]
font = ExtResource("3_ea6il")
font_size = 18
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[node name="UnitInstance" type="Node2D" node_paths=PackedStringArray("visualParent", "abilityParent", "combatEffectsParent", "itemsParent", "healthBar", "affinityIcon")]
script = ExtResource("1_8f2nx")
visualParent = NodePath("Visual")
abilityParent = NodePath("Abilities")
combatEffectsParent = NodePath("Effects")
itemsParent = NodePath("Items")
healthBar = NodePath("HealthBarParent")
focusSlotPrefab = ExtResource("4_kfodt")
affinityIcon = NodePath("AffinityIcon")

[node name="Visual" type="Node2D" parent="."]

[node name="Abilities" type="Node2D" parent="."]

[node name="Items" type="Node2D" parent="."]

[node name="Effects" type="Node2D" parent="."]

[node name="DefendIcon" type="Sprite2D" parent="."]
unique_name_in_owner = true
visible = false
modulate = Color(0.298039, 1, 0.254902, 1)
position = Vector2(53.5, 53.5)
scale = Vector2(0.0410156, 0.0410156)
texture = ExtResource("4_reqvg")

[node name="AffinityIcon" type="Sprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(11, 55)
scale = Vector2(0.0410156, 0.0410156)
texture = ExtResource("7_vnfmn")

[node name="PositiveAfffinity" type="Sprite2D" parent="AffinityIcon"]
unique_name_in_owner = true
visible = false
scale = Vector2(2, 2)
texture = ExtResource("9_v7dhr")

[node name="NegativeAffinity" type="Sprite2D" parent="AffinityIcon"]
unique_name_in_owner = true
visible = false
position = Vector2(0, -463.238)
scale = Vector2(2, 2)
texture = ExtResource("10_pwwos")

[node name="DamageIndicator" parent="." instance=ExtResource("2_e4h56")]

[node name="HealthBarParent" type="Control" parent="." node_paths=PackedStringArray("HealthBar", "ArmorBar", "HealthText", "FocusBarEntryList", "HideTimer")]
unique_name_in_owner = true
z_index = 1
custom_minimum_size = Vector2(64, 16)
layout_mode = 3
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 64.0
offset_bottom = 16.0
grow_vertical = 2
script = ExtResource("4_ae3kp")
HealthBar = NodePath("Offset/HealthBar")
ArmorBar = NodePath("Offset/ArmorBar")
HealthText = NodePath("Offset/HP Val")
FocusBarEntryList = NodePath("Offset/FocusContainer/FocusBarParent")
FocusBarPrefab = ExtResource("4_kfodt")
HideTimer = NodePath("AutoHideTimer")

[node name="Offset" type="Control" parent="HealthBarParent"]
anchors_preset = 0
offset_top = 64.0
offset_bottom = 64.0

[node name="HealthBar" type="ProgressBar" parent="HealthBarParent/Offset"]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 16)
layout_mode = 2
offset_left = -8.0
offset_right = 72.0
offset_bottom = 16.0
theme_override_styles/background = SubResource("StyleBoxFlat_n6je4")
theme_override_styles/fill = SubResource("StyleBoxFlat_yrop1")
max_value = 1.0
value = 1.0
show_percentage = false

[node name="ArmorBar" type="ProgressBar" parent="HealthBarParent/Offset"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(80, 16)
layout_mode = 2
offset_left = -8.0
offset_right = 72.0
offset_bottom = 16.0
theme_override_styles/fill = SubResource("StyleBoxFlat_f5801")
max_value = 1.0
value = 0.84
fill_mode = 1
show_percentage = false

[node name="HP Val" type="Label" parent="HealthBarParent/Offset"]
unique_name_in_owner = true
custom_minimum_size = Vector2(16, 0)
layout_mode = 2
offset_left = 13.0
offset_top = -9.0
offset_right = 54.0
offset_bottom = 16.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 0
text = "25/30"
label_settings = SubResource("LabelSettings_lypks")
horizontal_alignment = 1
vertical_alignment = 1

[node name="FocusContainer" type="MarginContainer" parent="HealthBarParent/Offset"]
layout_mode = 0
offset_left = -8.0
offset_top = 16.0
offset_right = 72.0
offset_bottom = 24.0
theme_override_constants/margin_left = 1
theme_override_constants/margin_right = 1

[node name="FocusBarParent" type="HBoxContainer" parent="HealthBarParent/Offset/FocusContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 1
script = ExtResource("4_lg50f")

[node name="AutoHideTimer" type="Timer" parent="HealthBarParent"]
wait_time = 1.5
